Exchanging deprecated SUN Base64 implementation with one of Xerces